# nexus

./: .gitignore  .pre-commit-config.yaml  .pre-commit-config.yml  README.md  ansible.cfg  generate_compose.py  pyproject.toml  renovate.json  tasks.py
.github/workflows/: ci.yml
actual/: .env.sample  README.md  docker-compose.yml
ansible/: playbook.yml
ansible/inventory/: hosts.example
ansible/roles/alerting/tasks/: main.yml
ansible/roles/alerting/templates/: alert_bot_config.yml.j2  alertmanager.yml.j2
ansible/roles/docker/tasks/: main.yml
ansible/roles/monitoring/tasks/: main.yml
ansible/roles/monitoring/templates/: prometheus.yml.j2
ansible/roles/nexus/handlers/: main.yml
ansible/roles/nexus/tasks/: main.yml
ansible/roles/nexus/templates/: access-rules.yml.j2  docker-compose.yml.j2  protondrive-sync.plist.j2
ansible/vars/: main.yml  vault.yml.sample
config/: presets.yml
docs/: ACCESS_CONTROL.md  ALERTING.md  ARCHITECTURE.md  DEPLOYMENT.md  DNS_FILTERING.md  README.md  SECRETS.md  SSH_ACCESS.md  TAILSCALE.md
docs/runbooks/: README.md  authelia.md  backups.md  dashboard.md  foundryvtt.md  jellyfin.md  monitoring.md  nextcloud.md  plex.md  sure.md  traefik.md  transmission.md
foundryvtt/: .env.sample  README.md  docker-compose.yml
jellyfin/: .env.sample  README.md  docker-compose.yml
scripts/: alert_bot.py  bootstrap  bootstrap.old  bootstrap.sh  deploy.py  generate  generate-secrets.sh  generate_dashboard.py  health_check.py  operations.py  restore.py  setup-ssh.sh  setup-tailscale-ssh.sh  sync-to-protondrive.sh
services/auth/: README.md  configuration.yml.sample  docker-compose.yml  users_database.yml.sample
services/backups/: README.md  config.json.j2  docker-compose.yml  rclone.conf.j2  service.yml
services/booklore/: README.md  docker-compose.yml  service.yml
services/cloudflared/: README.md  docker-compose.yml  service.yml
services/dashboard/: README.md  docker-compose.yml  service.yml
services/dashboard/config/: bookmarks.yaml  services.yaml  settings.yaml  widgets.yaml
services/donetick/: README.md  docker-compose.yml  service.yml
services/donetick/config/: selfhosted.yml
services/foundryvtt/: README.md  docker-compose.yml  s3.json.j2  service.yml
services/grimmory/: README.md  docker-compose.yml  service.yml
services/jellyfin/: README.md  docker-compose.yml  service.yml
services/jotty/: README.md  docker-compose.yml  service.yml
services/monitoring/: README.md  alertmanager.yml  alerts.yml  docker-compose.yml  prometheus.yml  service.yml
services/monitoring/alert-bot/: Dockerfile  alert_bot.py
services/monitoring/grafana/dashboards/: services.json  system-overview.json  traefik.json
services/monitoring/grafana/provisioning/dashboards/: dashboards.yml
services/monitoring/grafana/provisioning/datasources/: prometheus.yml
services/monitoring/tailscale-exporter/: Dockerfile  tailscale_exporter.py
services/nextcloud/: README.md  docker-compose.yml  service.yml
services/paperless/: README.md  docker-compose.yml  service.yml
services/plex/: README.md  docker-compose.yml  service.yml
services/proton-drive-sync/: README.md  docker-compose.yml  service.yml
services/sure/: Modelfile  README.md  docker-compose-ollama.yml  docker-compose.yml  service.yml
services/sure/docs/: README.md  ai-integration.md  expense-analysis.md  how-it-works.md  ollama-setup.md
services/sure/scripts/: setup_model.sh
services/tailscale-access/: Dockerfile  README.md  docker-compose.yml  main.py  requirements.txt  service.yml
services/tailscale-access/templates/: 403.html
services/traefik/: README.md  docker-compose.yml  service.yml  traefik.yml  traefik.yml.sample
services/traefik/rules/: middlewares.yml  middlewares.yml.sample  whitelist.yml
services/transmission/: README.md  docker-compose.yml  service.yml
services/vaultwarden/: README.md  docker-compose.yml  service.yml
split-pro/: .env.sample  README.md  docker-compose.yml
src/nexus/: __init__.py  config.py  services.py  types.py  utils.py
src/nexus/alerts/: __init__.py  discord.py
src/nexus/alerts/tests/: test_discord.py
src/nexus/cli/: alert_bot.py  backup.py  backup_list.py  backup_verify.py  deploy.py  health.py  operations.py  restore.py
src/nexus/cli/tests/: test_alert_bot.py  test_backup.py  test_deploy.py  test_health.py  test_operations.py  test_restore.py
src/nexus/deploy/: __init__.py  ansible.py  auth.py  docker.py  terraform.py
src/nexus/deploy/tests/: test_ansible.py  test_auth.py  test_docker.py  test_terraform.py
src/nexus/generate/: __init__.py  access_rules.py  dashboard.py
src/nexus/generate/tests/: test_access_rules.py  test_dashboard.py
src/nexus/health/: __init__.py  checks.py
src/nexus/health/tests/: test_checks.py
src/nexus/operations/: __init__.py  maintenance.py
src/nexus/operations/tests/: test_maintenance.py
src/nexus/restore/: __init__.py  backup.py
src/nexus/restore/tests/: test_backup.py
src/nexus/tests/: conftest.py  test_backups.py  test_booklore.py  test_compose_common.py  test_config.py  test_foundryvtt.py  test_grimmory.py  test_monitoring.py  test_paperless.py  test_proton_drive_sync.py  test_services.py  test_sure.py  test_traefik.py  test_utils.py  test_vaultwarden.py
sure/: .env.sample  README.md  docker-compose-ollama.yml  docker-compose.yml
sure/docs/: README.md  ai-integration.md  how-it-works.md  ollama-setup.md
tailscale/: README.md  acl-policy.jsonc
terraform/: .gitignore  .terraform.lock.hcl  cloudflare_dns.tf  cloudflare_gateway.tf  cloudflare_r2.tf  cloudflare_tunnel.tf  imports.tf  main.tf  tailscale.tf
tests/: __init__.py
tests/nexus/: __init__.py  test_config.py  test_utils.py
tests/nexus/deploy/: __init__.py  test_ansible.py  test_auth.py  test_docker.py  test_terraform.py
tests/nexus/generate/: __init__.py  test_dashboard.py
traefik/: .env.sample  README.md  docker-compose.yml
transmission/: .env.sample  README.md
